style: fix button style on safari

--- a/src/templates/tpl_modified/css/grandeljay_wordpress_integration_blog_listing.css
+++ b/src/templates/tpl_modified/css/grandeljay_wordpress_integration_blog_listing.css
@@ -119,6 +119,11 @@
     }
 }
 
+.filter .actions input[type="submit"] {
+    font-weight: inherit;
+    color: inherit;
+}
+
 /** Slick */
 .filter .slick-slide .tag > label {
     margin-right: 8px;
